--- a/smorgasbord-test/AndroidManifest.xml
+++ b/smorgasbord-test/AndroidManifest.xml
@@ -1,19 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.simplegeo.android"
+      package="com.simplegeo.android.test"
       android:versionCode="1"
       android:versionName="1.0">
     <uses-sdk android:minSdkVersion="4" />
+    <instrumentation android:targetPackage="com.simplegeo.android" android:name="android.test.InstrumentationTestRunner" />
     <uses-permission android:name="android.permission.INTERNET" />
-
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".SmorgasbordActivity"
-                  android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
 
+    <uses-library android:name="android.test.runner" />
     </application>
 </manifest>
